--- a/WebFun/day_1/index.html
+++ b/WebFun/day_1/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World!</h1>
     <h2>Hello World...but smaller!</h2>
     <p>Paragraph</p>
+    <p>Another one</p>
     
 </body>
 </html>
